# tcc-stats

./: .gitignore  .pre-commit-config.yaml  README.md  requirements-dev.txt  requirements.txt  setup.cfg  streamlit_app.py
.github/workflows/: releases.yaml
.streamlit/: config.toml  tcc_stats.db
streamlit/: main.py
tcc_stats/: __main__.py  color.py  constants.py  create_db.py  main.py
tcc_stats/commands/: extract.py
