[metadata]
name = tcc-stats
version = 1.0.0
description = A Python package for generating statistics from TCC data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dimboump/tcc-stats
author = Dimitris Boumparis
author_email = dimitris@dimboump.dev
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    pandas>=1.0.0
    matplotlib>=3.0.0
    numpy>=1.0.0
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    tcc-stats = tcc_stats.main:main

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 80
ignore = E266, E501
